fixed height of nav bar, seems to only not work on firefox

--- a/gci/style.css
+++ b/gci/style.css
@@ -11,12 +11,12 @@ header {
 }
 
 nav {
-  margin: 10px;
-  padding: 20px 0;
+  margin: 0;
+  padding: 10px 0;
 }
 
 ul {
-  margin: 30px auto;
+  margin: 10px auto;
   padding: 0 20px;
   display: flex;
   align-items: center;
